--- a/assets/scss/media-queries.scss
+++ b/assets/scss/media-queries.scss
@@ -16,7 +16,7 @@
 
 @media all and (max-width: 1100px) {
 
-  .panel--cover__logo {
+  .panel-cover__logo {
     width: 70px;
   }
 
@@ -28,7 +28,7 @@
     font-size: 1em;
   }
 
-  .panel--cover__description {
+  .panel-cover__description {
     margin: 0 10px;
     font-size: .9em;
   }
@@ -53,12 +53,9 @@
   .panel-main {
     display: table;
     position: relative;
-    width: 100%;
-    height: 100%;
-    background-position: center center;
   }
 
-    .panel-main--collapsed {
+    .panel-cover--collapsed {
       width: 100%;
       max-width: none;
     }
@@ -68,40 +65,43 @@
     padding: 60px 10%;
   }
 
-  .panel--cover__description {
+  .panel-cover__description {
     display: block;
     max-width: 600px;
     margin: 0 auto;
   }
 
-  .panel--cover__divider--secondary {
+  .panel-cover__divider--secondary {
     display: none;
   }
 
-  .panel-main {
+  .panel-cover {
+    width: 100%;
+    height: 100%;
+    background-position: center center;
 
-    &.panel-main--collapsed {
+    &.panel-cover--collapsed {
       display: block;
       position: relative;
       height: auto;
-      padding: 62px 0 30px 0;
+      padding: 0;
       background-position: center center;
 
       .panel-main__inner {
         display: block;
-        padding: 0 10%;
+        padding: 70px 0 30px 0;
       }
 
-      .panel--cover__logo {
+      .panel-cover__logo {
         width: 60px;
         border-width: 2px;
       }
 
-      .panel--cover__description {
+      .panel-cover__description {
         display: none;
       }
 
-      .panel--cover__divider {
+      .panel-cover__divider {
         display: none;
         margin: 1em auto;
       }
